# process_guard

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  justfile
config/: default_config.json
pack/: pack.py  pack_dwm_monitor.iss  readme.txt  releasenote.md  start_service.bat  stop_service.bat
scripts/: query_display.py
src/: config_manager.rs  db_manager.rs  logging.rs  main.rs  process_manager.rs  system_info_printer.rs  tests.rs
