[package]
name = "check_restart_dwm"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.32"
windows-service = "0.7"
log4rs = "1.3"
log = "0.4"
simple_config_parser = "1.0.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "psapi", "winnt", "errhandlingapi"] }
