[package]
name = "process_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.7"
log4rs = "1.3"
log = "0.4"
wmi = "0.14"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "psapi", "winnt", "errhandlingapi", "sysinfoapi", "memoryapi", "libloaderapi", "ntdef","userenv","wtsapi32","securitybaseapi"] }
wmi = "0.14"

[dev-dependencies]
ctor = "0.2"