[package]
name = "process_guard"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
windows-service = "0.7"
log4rs = "1.3"
log = "0.4"
wmi = "0.14"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rusqlite = { version = "0.32.1",features = ["bundled"] }
lazy_static = "1.5"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "psapi", "winnt", "errhandlingapi", "sysinfoapi", "memoryapi", "libloaderapi", "ntdef","userenv","wtsapi32","securitybaseapi","tlhelp32"] }
wmi = "0.14"

[dev-dependencies]
ctor = "0.2"
chrono = "0.4"
